--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </div>
     <footer class="footer">
       &copy; All Rights Reserved. <br />
-      Created by Shafqat Irfan.
+      Created by Ansar Ali.
     </footer>
   </body>
   <script src="script.js"></script>
